--- a/Facebook/Views/Home/LoginPartial.cshtml
+++ b/Facebook/Views/Home/LoginPartial.cshtml
@@ -8,7 +8,7 @@
                         <div class="row justify-content-center">
                             <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login</p>
+                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign in!</p>
 
                                 <form action="/Login" method="post" class="mx-1 mx-md-4">
                                     <div class="d-flex flex-row align-items-center mb-4">
@@ -29,7 +29,7 @@
 
 
                                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                        <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                                        <button type="submit" class="btn btn-primary btn-lg">Sign in</button>
                                     </div>
                                 </form>
                             </div>
