--- a/Facebook/Views/Home/UserId.cshtml
+++ b/Facebook/Views/Home/UserId.cshtml
@@ -1,17 +1,14 @@
 @model User
-<h1>@Model.Name</h1>
+
+<div class="row">
+    <div class="col-sm-6">
+<h4>@Model.Name</h4>
 
 <p>@Model.Description</p>
 
-
+</div>
+<div class="col-sm-6">
     <a href="/">My Profile</a>
     <a href="/Logout">Logout</a>
-
-@* 
-    @foreach (var item in ViewBag.marrNgaDb)
-{
-    
-   
-    <h6>@item.Name</h6>
-    <p>@item.Description</p>
-} *@
+</div>
+</div>
