--- a/Facebook/Views/Home/Users.cshtml
+++ b/Facebook/Views/Home/Users.cshtml
@@ -24,7 +24,8 @@
             </tbody>
         </table>
     </div>
-    <div class="col-sm-5">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-6">
     <a href="/">My Profile</a>
     <a href="/Logout">Logout</a>
     </div>
